# Holiday-Destinations-and-Activities-Generator

./: .gitignore  .pre-commit-config.yaml  Dockerfile  MIGRATION.md  Makefile  README.md  TROUBLESHOOTING.md  app.py  docker-compose.yml  env.example  fix_streamlit.py  langchain_helper.py  main.py  pyproject.toml  pytest.ini  requirements.txt  run_app.bat  run_app.sh  start_app.py  test_fine_tuned_model.py
scripts/: __init__.py  fine_tune_model.py
src/: __init__.py
src/config/: settings.py
src/core/: __init__.py  cache.py  fine_tuning.py  logging.py
src/models/: __init__.py  schemas.py
src/services/: __init__.py  destination_service.py
src/ui/: streamlit_app.py
tests/: __init__.py  test_destination_service.py
