[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "holiday-destinations-generator"
version = "2.0.0"
description = "Enterprise-grade AI-powered holiday destinations and activities generator"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
keywords = ["travel", "ai", "destinations", "streamlit", "langchain"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = [
    "streamlit>=1.28.0",
    "langchain>=0.0.350",
    "openai>=1.3.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "requests>=2.31.0",
    "httpx>=0.25.0",
    "redis>=5.0.0",
    "diskcache>=5.6.0",
    "structlog>=23.2.0",
    "streamlit-option-menu>=0.3.0",
    "plotly>=5.17.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.12.0",
    "httpx-mock>=0.7.0",
    "black>=23.11.0",
    "flake8>=6.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.6.0",
    "isort>=5.12.0",
]
monitoring = [
    "prometheus-client>=0.19.0",
    "sentry-sdk>=1.38.0",
]
security = [
    "cryptography>=41.0.0",
    "python-jose[cryptography]>=3.3.0",
]
database = [
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/holiday-destinations-generator"
Documentation = "https://github.com/yourusername/holiday-destinations-generator#readme"
Repository = "https://github.com/yourusername/holiday-destinations-generator.git"
"Bug Tracker" = "https://github.com/yourusername/holiday-destinations-generator/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["src"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "streamlit.*",
    "langchain.*",
    "openai.*",
    "redis.*",
    "diskcache.*",
    "structlog.*",
    "plotly.*",
    "streamlit_option_menu.*",
]
ignore_missing_imports = true

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    ".eggs",
    "*.egg",
] 